Make header link back to home page.
I want this to go through Backbone's router rather than reloading the
page.  This seems to be the correct way to do that, even if it is pretty
verbose.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,10 +1,14 @@
 @import url(http://fonts.googleapis.com/css?family=Merriweather:900);
 
-header {
+#pageHeader {
 	background-color: #4f81bd;
 }
 
-header h1 {
+#pageHeader a:hover {
+	text-decoration: none;
+}
+
+#pageHeader h1 {
 	text-transform: uppercase;
 	text-align: center;
 	font-family: 'Merriweather', serif;
