Put the teaser in a paragraph for styling/semantic reasons.

--- a/scripts/templates/postTeaser.hbs
+++ b/scripts/templates/postTeaser.hbs
@@ -1,2 +1,2 @@
 <a class="postTitle" href="/posts/{{_id}}"><h2>{{title}}</h2></a>
-<article class="postTeaser">{{{teaser}}}</article>
+<article class="postTeaser"><p>{{{teaser}}}</p></article>
