--- a/scripts/templates/post.hbs
+++ b/scripts/templates/post.hbs
@@ -1,2 +1,2 @@
-<a class="postTitle" href="/posts/{{_id}}"><h2>{{title}}</h2></a>
-<article class="postBody">{{{body}}}</article>
+<h2>{{title}}</h2>
+{{{body}}}
