Fix semantic layout for post teaser.

--- a/scripts/templates/postTeaser.hbs
+++ b/scripts/templates/postTeaser.hbs
@@ -1,2 +1,4 @@
-<a class="postTitle" href="/posts/{{_id}}"><h2>{{title}}</h2></a>
-<article class="postTeaser"><p>{{{teaser}}}</p></article>
+<article>
+  <a class="postTitle" href="/posts/{{_id}}"><h2>{{title}}</h2></a>
+  <p>{{{teaser}}}</p>
+</article>
