Escape teaser content.

--- a/scripts/templates/postTeaser.hbs
+++ b/scripts/templates/postTeaser.hbs
@@ -1,4 +1,4 @@
 <article>
   <a class="postTitle" href="/posts/{{_id}}"><h2>{{title}}</h2></a>
-  <p>{{{teaser}}}</p>
+  <p>{{teaser}}</p>
 </article>
